PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Major performance improvements when merging many result files
- pts-core: Faster result file parsing
- pts-core: Stress-run improvements
- phoromatic: Improved tracker page
- phoromatic: Updated maintenance page
- phoromatic: Log tick sensors into sensors-pool

Phoronix Test Suite 5.8 Milestone 4
20 May 2015

- pts-core: Support for using DNF directly when available on Fedora
- phodevi: Report kernel's build date when detected it's running on a daily/devel/RC kernel
- phodevi: Fix for Radeon GPU voltage reporting
- phodevi: Improved open-source GPU frequency detection when X Server not active
- phoromatic: Various fixes
- phoromatic: Add support for specifying custom client update script via account settings page to keep clients PTS updated
- phoromatic: Change interface of reporting sensor values

Phoronix Test Suite 5.8 Milestone 3
12 May 2015

- pts-core: Separate out WebSocket server back-ends
- phoromatic: Honor show_local_tests_only option via the build suite page
- phoromatic: Fix jumping on page on checkbox selection when scrolling
- phoromatic: Don't print network connectivity messages
- phoromatic: Set Phoromatic System Variables set by server on Phoromatic clients as env vars
- phoromatic: Lots of early Web Sockets work
- phoromatic: Initial support for the Mongoose Embedded Web Server, used by default if php-cgi and mongoose binaries are found in PATH
- phoromatic: Support for tick thread
- phoromatic: Support for reporting system sensors and client log to systems page
- phoromatic: Add support for real-time halt testing and rebooting from the Phoromatic Web UI

Phoronix Test Suite 5.8 Milestone 2
21 April 2015

- pts-core: Fix potential crash in list-installed-suites sub-command
- pts-core: Enforce CCACHE_DISABLE=1 during install/runtime testing
- pts-core: Finish removal of hhvm-server support since it's long been discontinued upstream
- pts-core: Add pts-core/hooks/startup