@@ -8,6 +8,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Improved tracker page
 - phoromatic: Updated maintenance page
 - phoromatic: Log tick sensors into sensors-pool
+- phoromatic: Show prominent sensors via the dashboard
 
 Phoronix Test Suite 5.8 Milestone 4
 20 May 2015
